# apple-crates

./: Cargo.toml  README.MD
adi/: Cargo.toml
adi/src/: calls.rs  core_adi.rs  lib.rs  proxy.rs
adi_files2/: adi.pb
adid-proxy/: Cargo.toml  README.md
adid-proxy/src/: lib.rs  xpc.rs
android-coreadi/: Cargo.toml
android-coreadi/src/: lib.rs  linux.rs  linux_libc.rs  unix.rs  windows.rs
apple-account/: Cargo.toml  README.md
apple-account/src/: bundle_information.rs  device.rs  grandslam.rs  http_session.rs  itunes.rs  lib.rs  plist_request.rs
apple-account/src/grandslam/: anisette.rs  authenticated_session.rs  post_data.rs  url_switch.rs
apple-codesign-quick/: Cargo.toml
apple-codesign-quick/src/: main.rs
elf-loader/: Cargo.toml
elf-loader/src/: elf_hash_table.rs  elf_library.rs  lib.rs
elf-loader/sysv64/: Cargo.toml  build.rs
elf-loader/sysv64/src/: lib.rs
fairplay/: Cargo.toml
fairplay/src/: lib.rs
grandslam/: Cargo.toml
grandslam/src/: bundle_information.rs  grandslam.rs  http_session.rs  lib.rs
grandslam/src/grandslam/: anisette.rs  authenticated_session.rs  secondary_actions.rs
itunes/: Cargo.toml
itunes/src/: itunes.rs  lib.rs
library-coreadi/: Cargo.toml
library-coreadi/src/: lib.rs
plist-macros/: Cargo.toml
plist-macros/src/: lib.rs
purple-builder/: Cargo.toml
purple-builder/src/: identity.rs  main.rs  main_window.rs  welcome_window.rs
super-sideloader/: Cargo.toml
super-sideloader/src/: main.rs
xcode/: Cargo.toml
xcode/src/: developer_actions.rs  lib.rs
