[workspace]
resolver = "2"
members = ["adi", "adid-proxy", "android-coreadi", "grandslam", "apple-codesign-quick", "elf-loader", "fairplay", "itunes", "library-coreadi", "plist-macros", "purple-builder", "super-sideloader", "xcode"]

[workspace.dependencies]
adi = { path = "adi" }
adid-proxy = { path = "adid-proxy" }
android-coreadi = { path = "android-coreadi" }
elf-loader = { path = "elf-loader" }
grandslam = { path = "grandslam" }
itunes = { path = "itunes" }
library-coreadi = { path = "library-coreadi" }
plist-macros = { path = "plist-macros" }
xcode = { path = "xcode" }

plist = "1"
reqwest = { version = "0.13", features = ["rustls", "query", "gzip"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

aes = "0.9.0-rc.2"
aes-gcm = "0.11.0-rc.2"
cbc = { version = "0.2.0-rc.2", features = ["alloc"] }
hmac = "0.13.0-rc.4"
pbkdf2 = "0.13.0-rc.8"
sha1 = "0.11.0-rc.4"
sha2 = "0.11.0-rc.4"
