[package]
name = "itunes"
version = "0.1.0"
edition = "2024"

[dependencies]
adi.workspace = true
grandslam.workspace = true
plist.workspace = true
plist-macros.workspace = true

reqwest.workspace = true
thiserror.workspace = true

base64 = "0.22.1"
rand = "0.9.2"
hex = "0.4.3"
bytes = "1.10.1"
log = "0.4.29"
uuid = { version = "1.19.0", features = ["v4"] }
