[package]
name = "super-sideloader"
version = "0.1.0"
edition = "2021"

[dependencies]
adi.workspace = true
android-coreadi.workspace = true
apple-account.workspace = true
elf-loader.workspace = true

tokio.workspace = true
libc = "0.2.176"
env_logger = "0.11.8"

[target.'cfg(target_os = "macos")'.dependencies]
adid-proxy.workspace = true
